# AoC24

./: Cargo.toml
day1/: Cargo.toml
day1/src/: main.rs
day10/: Cargo.toml
day10/src/: main.rs
day11/: Cargo.toml
day11/src/: main.rs
day12/: Cargo.toml
day12/src/: main.rs
day13/: Cargo.toml
day13/src/: main.rs
day14/: Cargo.toml
day14/src/: main.rs
day15/: Cargo.toml
day15/src/: part1.rs  part2.rs
day16/: Cargo.toml
day16/src/: part1.rs
day17/: Cargo.toml
day17/src/: part1.rs  part2.rs
day18/: Cargo.toml
day18/src/: part1.rs  part2.rs
day19/: Cargo.toml
day19/src/: part1.rs  part2.rs
day2/: Cargo.toml
day2/src/: main.rs
day20/: Cargo.toml
day20/src/: part1.rs  part2.rs
day21/: Cargo.toml
day21/src/: part1.rs  part2.rs
day22/: Cargo.toml
day22/src/: part1.rs  part2.rs
day23/: Cargo.toml
day23/src/: part1.rs  part2.rs
day24/: Cargo.toml
day24/src/: part1.rs  part2-1.rs  part2-2.rs  part2-3.rs
day3/: Cargo.toml
day3/src/: main.rs
day4/: Cargo.toml
day4/src/: main.rs
day5/: Cargo.toml
day5/src/: main.rs
day6/: Cargo.toml
day6/src/: main.rs
day7/: Cargo.toml
day7/src/: main.rs
day8/: Cargo.toml
day8/src/: main.rs
day9/: Cargo.toml
day9/src/: main.rs
scripts/: personal_times.py
