[package]
name = "day24"
version = "0.1.0"
edition = "2021"


[dependencies]
pathfinding = "4.12"
itertools = "0.13.0"
rand = "0.8.5"

[[bin]]
name = "part1"
path = "src/part1.rs"

[[bin]]
name = "part2-1"
path = "src/part2-1.rs"

[[bin]]
name = "part2-2"
path = "src/part2-2.rs"

[[bin]]
name = "part2-3"
path = "src/part2-3.rs"
